Added Omniauth functions and other bug fix

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,3 +20,10 @@ Metrics/LineLength:
   Enabled: false
 MethodLength:
   Max: 35
+Metrics/AbcSize:
+  Include: ["app/models/*"]
+  Max: 20
+Style/Documentation:
+  Enabled: false
+Style/ClassAndModuleChildren:
+  Enabled: false
